# swing

./: .gitignore  Cargo.toml  DEVELOPER_TOOLS.md  INSTALL.md  JazzStandards.json  README.md  build.rs  install.sh  justfile  sync_database.py
.claude/: settings.local.json
Formula/: jazz-db.rb  swing.rb
lists_of_standards/: hal_leonard_jazz_piano_method_suggested_standards_list.md  rbv16e_400_song_list.json
src/: cli.rs  database.rs  display.rs  lib.rs  main.rs  models.rs  search.rs  stats.rs
