[package]
name = "jazz_standards_database"
version = "1.0.0"
edition = "2024"
description = "A CLI tool for searching and analyzing jazz standards"
authors = ["Jazz Database Team"]

[[bin]]
name = "swing"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
clap = { version = "4.5", features = ["derive"] }
